from ucommon 5.0.7 to 5.1.0
- Pollak's suggestion for peek method for queue added to queue, stack, buffer,
  and templates.
- new stringpager class to hold simple expanding tables of strings.

from ucommon 5.0.6 to 5.0.7
- use debian move xopen forward patch
- joinable thread self-join does cleanup of run state

from ucommon 5.0.5 to 5.0.6
- generic object save/auto-restore.
- separation of shell::error() from shell::errexit(0,...)
- separation of runtime and non-runtime libs
- disable posix_fadvise if header definitions missing (debian kfreebsd bug)

from ucommon 5.0.4 to 5.0.5
- fix for commoncpp emulation when no direct parent commoncpp thread.
- rename scrub to scrub files to avoid name conflict.
- some enhacement in cmake

from ucommon 5.0.3 to 5.0.4
- set without explicit this in templates conflicts with std inherited classes.

from ucommon 5.0.2 to 5.0.3
- specialization to use linked_pointer<struct sockaddr> to walk address lists.
- fix for cmake build of car.
- sockaddr util added to show address resolution lists.

from ucommon 5.0.1 to 5.0.2
- fix for termios support.
- shell getpass and inkey methods.
- extended cipher key management methods.
- crytographic archiver (car) added.
- openssl fips support added.

from ucommon 5.0.0 to 5.0.1
- missing commoncpp/numbers.h header.

from ucommon 4.3.3 to 5.0.0
- thread objects fully inheritable.

from ucommon 4.3.2 to 4.3.3
- service control path added for dropfile info.
- generics dup template added.

from ucommon 4.3.1 to 4.3.2
- cmake unit tests added and automated.
- extensions to mapping, copy and mapped_view get.
- certificate paths now part of usecure.
- sorting and named list issues resolved.

from ucommon 4.3.0 to 4.3.1
- fix for access to keyfile::create().
- new -xxx and +xxx numeric parser option.

from ucommon 4.2.2 to 4.3.0
- shell::path added.
- fsys for descriptor.
- keyfile extended.
- symlink handling in fsys.

from ucommon 4.2.1 to 4.2.2
- reorg how we do cmake path configurations.
